[tool.poetry]
name = "nlp_tools"
version = "0.1.0"
description = ""
authors = ["JD <10216562+joeld1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
numpy = {version = "^1.21.2", python = ">=3.8,<3.11"}
pandas = "^1.3.2"
scipy = {version = "^1.7.1", python = ">=3.8,<3.10"}
gensim = "^4.0.1"
nltk = "3.5"
sklearn = "^0.0"
spacy = "^3.1.2"
requests = "^2.26.0"
wordcloud = "^1.8.1"
matplotlib = "^3.4.3"
bs4 = "^0.0.1"
Faker = "^8.12.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.4.3"
ipykernel = "^6.2.0"
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
